fixing some layout problems

--- a/slickij-war/src/main/webapp/css/style/style.css
+++ b/slickij-war/src/main/webapp/css/style/style.css
@@ -1400,7 +1400,7 @@ span.log-level-TRACE {
 }
 
 .result-bar {
-    width: 1in;
+    width: 1.01in;
     height: .25in;
     padding: 0;
     clear: both;
